Fix background and button's contrast ratio

--- a/assets/css/bridge.css
+++ b/assets/css/bridge.css
@@ -16,7 +16,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #1e1e1e;
+  background-color: #121212;
   color: #ffffff;
   font-size: 2rem;
   font-weight: 500;
@@ -91,7 +91,7 @@ body {
 
 /* CALL TO ACTION */
 .cta {
-  background-color: #1c8c3d;
+  background-color: #167031;
   font-size: 2.4rem;
   font-weight: 500;
   padding: 2rem;
