--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,7 +20,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #1e1e1e;
+  background-color: #121212;
   color: #ffffff;
   font-size: 2rem;
   font-weight: 500;
@@ -116,7 +116,7 @@ body {
 }
 
 .btn {
-  background-color: #1c8c3d;
+  background-color: #167031;
   font-size: 2.4rem;
   font-weight: 500;
   padding: 2rem;
